@@ -5,8 +5,5 @@ AUX xemacs-21.5.28-vcdiff.patch 476 RMD160 1298334c8d309f9054d98ec98bdda6dba494b
 AUX xemacs.desktop 1080 RMD160 9ddca2747abcc4e7a8bb305740942f62daa73ba6 SHA1 6a3a88ea334b510951a15efb126c4fb71a3b8c38 SHA256 a97f2b5f1b85fde16eaf6b00cd3889a0c2777a0e2c1d7d3d2814f752a976b060
 DIST NeXT_XEmacs.tar.gz 39571 RMD160 3c2cedf75e4ece412031b20a15614a78367393f4 SHA1 619912734b1a1fae5115941b904d41beb4765b47 SHA256 35a0d988fd4ee801572639a99798571aa9fad140ddbed1455565ae9d5e0086c7
 DIST xemacs-21.5.28.tar.gz 15310202 RMD160 a225a2da39c22dccbc5d14399d40dadecead5e11 SHA1 6de5f4b4cecac0480dd9ff50170a72f23f36dbac SHA256 588a3970ee44426975cd86026a932ed0e2cf47f597ebcf76d376bbd18638eae2
-EBUILD xemacs-21.5.28-r1.ebuild 7306 RMD160 ca5d1563b91fd149603d7afc2d21f7ae43ffaa72 SHA1 d7b603e36ad8ad97d6a4c2f4766e8ea3842a84cd SHA256 af424d5218d61c12ccab0f5210b15fba4e76f4c1a2d35d894b86c0eb4b52cdbb
 EBUILD xemacs-21.5.28-r2.ebuild 7386 RMD160 411544516e4755156719f5a4b2697268d09ac257 SHA1 c46aabcc30bd69a2ba83064ca606d302a8f2ff5b SHA256 88e6d50290ddd103ca9605070a3a491ff57756ff33d933a1af724188e0b72566
-EBUILD xemacs-21.5.28.ebuild 6858 RMD160 6cf3d2f5ca70d593f55a4de018c1faa3f0f4813a SHA1 b134a6bba6d73a95c20c5563ab2df01a9e246097 SHA256 96436af9a6f93c44b72d1fbf0e1587c7f98615bdf3ec7db53099d6d2093f9b6a
-MISC ChangeLog 495 RMD160 934d293a6c4c01cc65b3f18bb6dd08e80cd96c0b SHA1 418d96266e25d57de7263e61817ea037300c2c0d SHA256 55d53ecc7778bf8a842c3c5b1578940f3a3bacb773d89e7fae28aefe754793d9
-MISC xemacs-21.5.28-r2.ebuild.~1~ 7306 RMD160 ca5d1563b91fd149603d7afc2d21f7ae43ffaa72 SHA1 d7b603e36ad8ad97d6a4c2f4766e8ea3842a84cd SHA256 af424d5218d61c12ccab0f5210b15fba4e76f4c1a2d35d894b86c0eb4b52cdbb
+MISC ChangeLog 616 RMD160 14aebbe55df6db1d4f63e95d735da82a36e9f5c6 SHA1 d0921cdcc01f8d3a2a1f038583e966ddb3d76bd2 SHA256 d576800665b97bb011bf17ff453e3b79369cbc8e2a59156469a3d573911701b6
